[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sapsf-shared"
version = "0.1.0"
description = "Shared Python SDK for SAP SuccessFactors tools - OData client, auth, config, and Flask base"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sahir Vhora"}]
keywords = ["sap", "successfactors", "odata", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/SahirVhora/sapsf-shared"
Repository = "https://github.com/SahirVhora/sapsf-shared"
Issues = "https://github.com/SahirVhora/sapsf-shared/issues"
"SF Compass Suite" = "https://sahirvhora.github.io/sf-compass/"

[project.optional-dependencies]
flask = ["flask>=2.3"]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "responses>=0.25",
    "mypy>=1.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sapsf_shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM115"]
